--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     --roundedCorners: 15px;
 }
 
+/*Bulma, creates even spacing around all block elements*/
+.block:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
 body {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
@@ -27,80 +32,84 @@ header {
 
 body,
 html {
-  height: 100%;
+    height: 100%;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)),
-    url("./images/airplane-sunset.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+#hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)),
+        url("./images/airplane-sunset.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 64px;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+#hero-text {
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 64px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-.airport-container {
-  margin: 60px auto;
-  text-align: center;
-  font-size: 36px;
-  box-shadow: var(--shadow);
-  transition: 0.3s;
-  width: 60vw;
-  color: white;
-  background-color: var(--secondaryColor);
-  padding: 2%;
-  border-radius: var(--roundedCorners);
+
+
+#airport-container {
+    margin: 60px auto;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: var(--shadow);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--secondaryColor);
+    padding: 2%;
+    border-radius: var(--roundedCorners); 
 }
 
-.hotel-container {
-  margin: 60px auto;
-  text-align: center;
-  font-size: 36px;
-  box-shadow: var(--shadow);
-  transition: 0.3s;
-  width: 60vw;
-  color: white;
-  background-color: var(--secondaryColor);
-  padding: 2%;
-  border-radius: var(--roundedCorners);
+#hotel-container {
+    margin: 60px auto;
+    text-align: center;
+    font-size: 36px;
+    box-shadow: var(--shadow);
+    transition: 0.3s;
+    width: 60vw;
+    color: white;
+    background-color: var(--secondaryColor);
+    padding: 2%;
+    border-radius: var(--roundedCorners);
 }
 
 .hide {
-  display: none;
+    display: none;
 }
 
 .show {
-  display: block;
+    display: block;
 }
 
+/* Replaced with Bulma framework styling*/
+/*
 button {
-  background-color: var(--buttonColor);
-  box-shadow: var(--shadow);
-  border: none;
-  color: white;
-  margin-top: 2%;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  font-weight: bold;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: var(--roundedCorners);
+    background-color: var(--buttonColor);
+    box-shadow: var(--shadow);
+    border: none;
+    color: white;
+    margin-top: 2%;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: var(--roundedCorners); 
 }
 
 button:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
-
+*/
