added results display for hotel and airport search, changed hero image

--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ header {
     color: white;
 }
 
+/* Replaced with Bulma*/
+
+/*
 body,
 html {
     height: 100%;
@@ -38,7 +41,8 @@ html {
 #hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)),
         url("./images/airplane-sunset.jpg");
-    height: 50vh;
+    height: 500px;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,7 +59,7 @@ html {
     font-size: 300%;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-
+*/
 #input-boxes {
     display: flex;
     justify-content: center;
@@ -109,19 +113,6 @@ html {
 .input {
     margin: 1%;
     padding: 2%;
-}
-
-/* Style the close button */
-.close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-    background-color: #f44336;
-    color: white;
 }
 
 .hide {
