--- a/style.css
+++ b/style.css
@@ -111,6 +111,12 @@ header {
   text-align: center;
 }
 
+#airport-results-container {
+  background-color: var(--secondaryColor);
+}
+#hotel-results-container {
+  background-color: var(--secondaryColor);
+}
 @media screen and (max-width: 1408px) {
   #checklist-container {
     width: 40%;
