--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --primaryColor: #2cd1b2;
-  --secondaryColor: #0c686b;;
+  --secondaryColor: #0c686b;
   --tertiaryColor: #aeefe4;
   --buttonColor: #686d70;
   --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
